fix table overflow

--- a/styles/JobSearchLog.module.css
+++ b/styles/JobSearchLog.module.css
@@ -1,6 +1,7 @@
 
 .jobTable {
-    width: 100%;
+    
+    max-width: 100%;
     border-collapse: collapse;
     border: 1px solid #ccc;
     font-size: 12px;
@@ -11,6 +12,8 @@
     text-align: center;
     /* add border */
     border: 1px solid #ccc;
+    word-break: break-all;
+    
 }
 .rejected {
     background-color: #ffcccc;
